# open-whisper-kit

./: AGENTS.md  Package.swift  README.md  build-sortformer-xcframework.sh  build-xcframework.sh
.github/workflows/: release-xcframeworks.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: whisperkit-style-sdk.md
.sisyphus/notepads/open-whisper-kit-sdk/: learnings.md
.sisyphus/plans/: open-whisper-kit-sdk.md
Sources/OpenWhisperKit/: AudioProcessor.swift  CallbackBridge.swift  Configuration.swift  DiarizationAligner.swift  DiarizationError.swift  DiarizationModels.swift  Models.swift  OpenWhisperKit.swift  Protocols.swift  RTTMParser.swift  SortFormerContext.swift  TranscriptionTask.swift  VADProcessor.swift  WhisperContext.swift  WhisperError.swift
Sources/diarize-cli/: main.swift
examples/OpenWhisperKitDemo/: Package.swift  README.md
examples/OpenWhisperKitDemo/Sources/: AudioRecorder.swift  ContentView.swift  DownloadManager.swift  OpenWhisperKitDemoApp.swift  ViewModel.swift
examples/OpenWhisperKitDemoiOS/OpenWhisperKitDemoiOS/: AudioRecorder.swift  ContentView.swift  DownloadManager.swift  Info.plist  OpenWhisperKitDemoiOSApp.swift  ViewModel.swift  ZipExtractor.swift
examples/OpenWhisperKitDemoiOS/OpenWhisperKitDemoiOS.xcodeproj/: project.pbxproj
examples/OpenWhisperKitDemoiOS/OpenWhisperKitDemoiOS.xcodeproj/xcshareddata/xcschemes/: OpenWhisperKitDemoiOS.xcscheme
ggml/src/ggml-metal/: ggml-metal-context.h  ggml-metal-context.m  ggml-metal-device.m  ggml-metal.cpp
include/: whisper.h
src/: whisper.cpp
streaming-sortformer/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  WISDOM.md  nemo_streaming.rttm
streaming-sortformer/bindings/node/: .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
streaming-sortformer/bindings/node/test/: basic.test.ts
streaming-sortformer/examples/realtime-diarization/: README.md  package.json  server.js
streaming-sortformer/examples/realtime-diarization/public/: app.js  index.html  style.css
streaming-sortformer/scripts/: compare_rttm.py  compare_tensors.py  convert_head_to_coreml.py  convert_to_gguf.py  dump_conformer_submodules.py  dump_nemo_intermediate.py  run_nemo_diarize.py  test-streaming-js.mjs  validate_gguf.py
streaming-sortformer/src/: sortformer-cli.cpp  sortformer.cpp  sortformer.h  test-streaming-api.cpp
streaming-sortformer/src/coreml/: sortformer-coreml.h  sortformer-coreml.mm
streaming-sortformer/tools/: quantize.cpp
tests/OpenWhisperKitTests/: AudioProcessorTests.swift  ConfigurationTests.swift  DiarizationAlignerTests.swift  DiarizationIntegrationTests.swift  DiarizationModelsTests.swift  IntegrationTests.swift  ModelsTests.swift  RTTMParserTests.swift
